Started styling. Button colors/shadows are correct. Still need to fix spacing and wrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
 .container {
-  background-color: lightblue;
+  background-color: #bb1333;
+}
+
+.display {
+  color: white;
+  background-color: #55596d;
+}
+
+button {
+  border-radius: 1rem;
+}
+
+.number {
+  color: white;
+  border: 1px solid #0c3c78;
+  background-color: #0c3c78;
+  box-shadow: 1px 1px 1px black;
+}
+
+.operator {
+  color: white;
+  border: 1px solid #3ab5e5;
+  background-color: #3ab5e5;
+  box-shadow: 1px 1px 1px black;
+}
+
+.special {
+  color: white;
+  border: 1px solid #1a61b0;
+  background-color: #1a61b0;
+  box-shadow: 1px 1px 1px black;
 }
